# minicc

./: .gitignore  .ocamlformat  README.md  clean_example.sh  compile.sh  dune-project  minicc.opam
examples/: block.c  conditional.c  failed_case.c  for.c  hello_world.c  local_variable.c  return_2  return_2.c  return_2.s  return_arithmetic.c  return_cmp.c
lib/: assembly.ml  ast.ml  codegen.ml  codegen.mli  compile.ml  compile.mli  dune  emit.ml  lexer.ml  lexer.mli  parser.ml  parser.mli  settings.ml  symbols.ml  tacky.ml  tacky_gen.ml  tacky_print.ml  token_stream.ml  token_stream.mli  token_type.ml  types.ml  unique_ids.ml  utils.ml
lib/backend/: codegen.ml  codegen.mli  instruction_fixup.ml  instruction_fixup.mli  replace_pseudos.ml  replace_pseudos.mli
lib/semantic_analysis/: label_loops.ml  label_loops.mli  resolve.ml  typecheck.ml  typecheck.mli
test/: dune  test_lexer.ml  test_parse.ml
