(include_subdirs unqualified)

(library
 (name minicc)
 (modules
  ast
  lexer
  parser
  token_type
  token_stream
  assembly
  codegen
  emit
  compile
  tacky
  tacky_gen
  tacky_print
  replace_pseudos
  instruction_fixup
  unique_ids
  settings
  utils)
 (libraries camlp-streams)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.ord ppx_deriving.eq))
   (instrumentation
  (backend bisect_ppx))
  )
